--- a/gallery.html
+++ b/gallery.html
@@ -89,7 +89,7 @@
 
 
         <li class="treeview">
-          <a href="#">
+          <a href="gallery.html">
             <i class="fa fa-camera"></i> <span>Gallery</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
@@ -102,7 +102,7 @@
 
 
         <li class="treeview">
-          <a href="#">
+          <a href="contact.html">
             <i class="fa fa-phone"></i> <span>Contact</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
