--- a/contact.html
+++ b/contact.html
@@ -229,8 +229,8 @@ integrity="sha256-kx16nUTlNRyEpdk7cvpnqblbDbTe/nADul9o2uYeGSw=" crossorigin="ano
                                                                     </div>
 
                                                                 </form>
-                                                                <button id="pass" class="btn btn-primary btn-flat" style="background-color: #7f67d9;" >Save</button>
-                                                                <button id="reset" class="btn btn-primary btn-flat" style="background-color: #7f67d9;" >Clear</button>
+                                                                <button id="pass" class="btn btn-primary btn-flat bg-purple"  >Save</button>
+                                                                <button id="reset" class="btn btn-primary btn-flat bg-purple"  >Clear</button>
                                                              <!-- /.box-body -->
                                                             <div class="col-md-13">
                                                                 <div class="card text-white bg-dark mb-3">
@@ -238,9 +238,9 @@ integrity="sha256-kx16nUTlNRyEpdk7cvpnqblbDbTe/nADul9o2uYeGSw=" crossorigin="ano
                                                                         <h3 class="card-title">My Contact List</h3>
                                                                     </div>
                                                                     <div class="card-body">
-                                                                        <table class="table text-white">
+                                                                        <table class="table text-white ">
                                                                             <thead>
-                                                                                <tr>
+                                                                                <tr class="table text-white bg-purple" >
                                                                                     <th>Firstname</th>
                                                                                     <th>Lastname</th>
                                                                                     <th>Gender</th>
